# -tarea1

t1SERVER/: CMakeLists.txt  configuracio.conf  main.cpp
t1SERVER/estructuras/: BST.cpp  BST.h  BSTNode.cpp  BSTNode.h  list.cpp  list.h  lnode.cpp  lnode.h
t1SERVER/html/: BSTNode_8cpp_source.html  BSTNode_8h_source.html  BST_8cpp_source.html  BST_8h_source.html  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp_source.html  Server_8cpp_source.html  Server_8h_source.html  annotated.html  classBST-members.html  classBST.html  classBSTNode-members.html  classBSTNode.html  classServer-members.html  classServer.html  classcon__handler-members.html  classcon__handler.html  classes.html  classlist-members.html  classlist.html  classlnode-members.html  classlnode.html  con__handler_8cpp_source.html  con__handler_8h_source.html  dir_19f2f1b99f19c12fa55b8d312cf373ed.html  dir_3d3c8ff3ebf9841b39117ac899f41936.html  dir_90e361ec3542f3dd076ea3ad19547437.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_dccf055762e439b5b6ec1f0cbb5c1c41.html  dir_e62c8f58c60534d28b8632597fc5eda9.html  dir_f89abcb304c928c7d889aa5625570de5.html  feature__tests_8c_source.html  feature__tests_8cxx_source.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  hierarchy.html  index.html  (+6 more)
t1SERVER/latex/: annotated.tex  classBST.tex  classBSTNode.tex  classServer.tex  classcon__handler.eps  classcon__handler.tex  classlist.tex  classlnode.tex  hierarchy.tex  refman.tex
t1SERVER/servidor/: Server.cpp  Server.h  con_handler.cpp  con_handler.h
(+55 files in other folders)
